tests/integration/fixtures/sample_org/objects/Opportunity/fields/Legacy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notes__c</fullName>
    <label>Legacy Notes</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>