tests/integration/fixtures/sample_org/objects/Opportunity/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <label>Enterprise Deal</label>
</RecordType>