tests/integration/fixtures/sample_org/objects/Opportunity/validationRules/Discount_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Cap</fullName>
    <active>true</active>
    <errorConditionFormula>Discount__c &gt; 40 &amp;&amp; NOT(ISCHANGED(StageName)) &amp;&amp; $User.ProfileId &lt;&gt; $Setup.Discount_Settings__c.Admin_Profile_Id__c</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discounts above 40% need an admin.</errorMessage>
</ValidationRule>